--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@anoblet/router",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rollup --config",
     "save": "git add . && git commit -m \"Chore: Save\"",
