--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2015",
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "target": "es2017",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "lib": ["es2017", "dom"],
     "declaration": true
   }
 }
