chore(module): save

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rollup --config",
+    "build": "tsc",
     "save": "git add . && git commit -m \"Chore: Save\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "rollup --config -w"
@@ -21,7 +21,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.22.1",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.9.7"
   },
   "types": "dist/index.d.ts"
 }
