--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "module": "es2015",
     "moduleResolution": "node",
     "lib": ["es2017", "dom"],
-    "declaration": true
+    "outDir": "dist"
   }
 }
